devices/fido: process requests once one discovery is successful.

Currently, requests only start processing once all discoveries are
complete. However, Bluetooth discovery can take 20+ seconds, which makes
it look like webauthn is broken if you're quickly trying it out.
Although it's behind a flag, we're telling developers to test with
Chrome 66 and so it would be good to tighten this up.

Bug: 813040
Change-Id: I145045bf76ffd1f670176505146ae929313b61fb
Reviewed-on: https://chromium-review.googlesource.com/924385
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Commit-Queue: Adam Langley <agl@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537950}
Former-commit-id: 6d94712b7fa7818c1a3ae17b7b1ce96d50099c55