device/fido/u2f_request.h
@@ -80,6 +80,7 @@ class U2fRequest : public U2fDiscovery::Observer {
   FRIEND_TEST_ALL_PREFIXES(U2fRequestTest, TestBasicMachine);
   FRIEND_TEST_ALL_PREFIXES(U2fRequestTest, TestAlreadyPresentDevice);
   FRIEND_TEST_ALL_PREFIXES(U2fRequestTest, TestMultipleDiscoveries);
+  FRIEND_TEST_ALL_PREFIXES(U2fRequestTest, TestSlowDiscovery);
   FRIEND_TEST_ALL_PREFIXES(U2fRequestTest, TestMultipleDiscoveriesWithFailures);
 
   // U2fDiscovery::Observer
